--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -12,7 +12,7 @@
 @mixin respond($breakpoint){
 
     @if $breakpoint == phone-6 {
-        @media only screen and (max-width: 20em){  // 240px
+        @media only screen and (max-width: 15em){  // 240px
             @content;
         }
     }
@@ -25,7 +25,7 @@
     }
 
     @if $breakpoint == phone-4 {
-        @media only screen and (max-width: 23.4375em){  // 375px
+        @media only screen and (max-width: 25.3125em){  // 405px
             @content;
         }
     }
